plugins {
    id 'java-library'
}

dependencies {
    api 'com.google.code.gson:gson:2.10.1'
    implementation 'io.github.classgraph:classgraph:4.8.172'
    implementation "net.lenni0451:Reflect:1.3.3"
    implementation 'org.slf4j:slf4j-api:2.0.13'
    implementation "org.slf4j:jul-to-slf4j:2.0.13"
}

tasks.withType(JavaCompile).configureEach {
    it.options.encoding = "UTF-8"
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}
